--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,21 @@
    Author's custom styles
    ========================================================================== */
 
+body {
+  padding-top: 10px;
+}
 
+.header {
+  padding: 10px;
+  border-radius: 10px;
+  background: #f9f9f9;
+}
 
-
-
-
-
+h2 {
+  padding: 10px;
+  border-radius: 10px;
+  background: #f9f9f9;
+}
 
 
 
