--- a/css/main.scss
+++ b/css/main.scss
@@ -1,9 +1,5 @@
-
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
+---
+---
 body {
   padding-top: 10px;
 }
@@ -24,11 +20,3 @@ h2 {
   color: #7d0022;
   font-family: 'Abel', sans-serif;
 }
-
-
-
-
-
-
-
-
