--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -8,4 +8,6 @@ h2 { padding: 10px; border-radius: 10px; background: #f9f9f9; }
 
 .page-break { page-break-after: always; }
 
+.line-h-2 { line-height: 2; }
+
 /*# sourceMappingURL=main.css.map */
