--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <i class="fa fa-envelope fa-lg"></i>
   </a>
 
-  <a href="http://www.linkedin.com/in/chamberlinmarc/en" class="btn btn-default">
+  <a href="https://www.linkedin.com/in/chamberlinmarc/en" class="btn btn-default">
     <i class="fa fa-linkedin fa-lg"></i>
   </a>
 
@@ -13,7 +13,7 @@
     <i class="fa fa-github fa-lg"></i>
   </a>
 
-  <a href="http://stackoverflow.com/users/2969823/chambeur?tab=profile" class="btn btn-default">
+  <a href="https://stackoverflow.com/users/2969823/chambeur?tab=profile" class="btn btn-default">
     <i class="fa fa-stack-overflow fa-lg"></i>
   </a>
 
