--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,13 +1,30 @@
-body { padding-top: 10px; }
+body {
+  padding-top: 10px;
+}
 
-.header { padding: 10px; border-radius: 10px; background: #f9f9f9; }
+.header {
+  padding: 10px;
+  border-radius: 10px;
+  background: #f9f9f9;
+}
 
-h2 { padding: 10px; border-radius: 10px; background: #f9f9f9; }
+h2 {
+  padding: 10px;
+  border-radius: 10px;
+  background: #f9f9f9;
+}
 
-.brand { color: #7d0022; font-family: 'Abel', sans-serif; }
+.brand {
+  color: #7d0022;
+  font-family: "Abel", sans-serif;
+}
 
-.page-break { page-break-after: always; }
+.page-break {
+  page-break-after: always;
+}
 
-.line-h-2 { line-height: 2; }
+.line-h-2 {
+  line-height: 2;
+}
 
 /*# sourceMappingURL=main.css.map */
