--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <!-- <meta name="description" content="About Marc Chamberlin"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/output.css">
+    <link rel="stylesheet" href="/css/output.css">
   </head>
   <body>
     {{ content }}
