--- a/css/input.css
+++ b/css/input.css
@@ -9,3 +9,7 @@
 .section-header {
   @apply text-2xl font-extrabold bg-slate-100 px-4 py-2 rounded-xl mb-4 print-color-exact;
 }
+
+.btn {
+  @apply rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50;
+}
